tests/assets/test_suites/w3c_wsdl20/documents/good/GreatH-2G/primer-hotelReservationService.wsdl
<?xml version="1.0" encoding="utf-8" ?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/good/GreatH-2G/primer-hotelReservationService.wsdl -->
<!-- Copyright © 2007-03-23 05:50 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<description xmlns="http://www.w3.org/ns/wsdl"
	targetNamespace="http://greath.example.com/2004/wsdl/resSvc"
	xmlns:tns="http://greath.example.com/2004/wsdl/resSvc"
	xmlns:ghns="http://greath.example.com/2004/schemas/resSvc"
	xmlns:wsdlx="http://www.w3.org/ns/wsdl-extensions"
	xmlns:wsoap="http://www.w3.org/ns/wsdl/soap"
	xmlns:soap="http://www.w3.org/2003/05/soap-envelope">

	<documentation>
		This document describes the GreatH Web service. Additional
		application-level requirements for use of this service -- beyond
		what WSDL 2.0 is able to describe -- are available at
		http://greath.example.com/2004/reservation-documentation.html
	</documentation>

	<types>
		<xs:schema xmlns:xs="http://www.w3.org/2001/XMLSchema"
			targetNamespace="http://greath.example.com/2004/schemas/resSvc"
			xmlns="http://greath.example.com/2004/schemas/resSvc">

			<xs:element name="checkAvailability"
				type="tCheckAvailability" />
			<xs:complexType name="tCheckAvailability">
				<xs:sequence>
					<xs:element name="checkInDate" type="xs:date" />
					<xs:element name="checkOutDate" type="xs:date" />
					<xs:element name="roomType" type="xs:string" />
				</xs:sequence>
			</xs:complexType>

			<xs:element name="checkAvailabilityResponse"
				type="xs:double" />

			<xs:element name="invalidDataError" type="xs:string" />

		</xs:schema>
	</types>

	<interface name="reservationInterface">

		<fault name="invalidDataFault" element="ghns:invalidDataError" />

		<operation name="opCheckAvailability"
			pattern="http://www.w3.org/ns/wsdl/in-out"
			wsdlx:safe="true">
			<input messageLabel="In" element="ghns:checkAvailability" />
			<output messageLabel="Out"
				element="ghns:checkAvailabilityResponse" />
			<outfault ref="tns:invalidDataFault" messageLabel="Out" />
		</operation>

	</interface>

	<binding name="reservationSOAPBinding"
		interface="tns:reservationInterface"
		type="http://www.w3.org/ns/wsdl/soap"
		wsoap:protocol="http://www.w3.org/2003/05/soap/bindings/HTTP/">

		<operation ref="tns:opCheckAvailability"
			wsoap:mep="http://www.w3.org/2003/05/soap/mep/request-response" />

		<fault ref="tns:invalidDataFault" wsoap:code="soap:Sender" />

	</binding>

	<service name="reservationService"
		interface="tns:reservationInterface">

		<endpoint name="reservationEndpoint"
			binding="tns:reservationSOAPBinding"
			address="http://greath.example.com/2004/reservation" />

	</service>

</description>
